feat: update color, style and logo

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-
-    </header>
+    <header>CV</header>
     <main>
         <section>
             <h1>Tsogoeva Tatiana</h1>
-            <img src="./photo.jpg" alt="photo">
+            <img id="photo" src="./photo.jpg" alt="photo">
         </section>
         <section>
             <h2>Contact Info:</h2>
@@ -63,15 +61,10 @@ function squareDigits(num){
         </section>
     </main>
     <footer>
-        <span>
-
-        </span>
-        <span>
-
-        </span>
-        <span>
-
-        </span>
+        <div class="logo">
+            <a href="https://rs.school/"><img src="rs_school_js.png" alt="logo"></a>
+        </div>
+        <span>Copyright © 2021</span>
     </footer>
     
 </body>
